samples/_failures_safe/1761528172_72852a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf816328.c: In function ‘main’:
./samples/SAFE/__tmp_cf816328.c:141:17: error: expected expression at end of input
  141 |                 } else
      |                 ^
./samples/SAFE/__tmp_cf816328.c:141:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cf816328.c:141:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cf816328.c:141:17: error: expected declaration or statement at end of input
